set ssl protocol version

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-/pom.xml
-*jar
-/lib
-/classes
-/native
-/.lein-failures
-/checkouts
-/.lein-deps-sum
-/target
+.lein-repl-history
+.nrepl-port
+target/
